additional homepage cleanup

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -72,7 +72,7 @@
         <div class="color-bar">
         	<div style="display: none;" class="mobile-buttons">
             	<a href="https://ti.to/gophercon/gophercon-2015" class="btn btn-orange" target="_blank" class="btn btn-orange">Tickets</a>
-                <a href="http://cfp.gophercon.com/events/gc15" class="btn btn-blue" target="_blank">Speakers</a>
+                <a href="/speakers" class="btn btn-blue" target="_blank">Speakers</a>
             </div>
         </div>
     </div>
@@ -86,7 +86,7 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <h1>July 7th - 10th, 2015 in Denver, CO</h1>
-                <p><b>GopherCon</b> is the largest gathering of Go developers in the world. Join us as 1,500 gophers converge on Denver, CO for 3 full days of talks, events, &amp; hacking.</p>
+                <p class="subheader"><b>GopherCon</b> It's the largest event in the world dedicated solely to the Go programming language. It's attended by the best and the brightest of the Go team and community. Join us as 1,500 gophers converge on <strong>Denver, Colorado</strong> for 3 full days of talks, events, &amp; hacking.</p>
               </div>
           </div>
       </div>
@@ -133,33 +133,13 @@
         </div>
       </div>
     </div>
-    
-  </section>
-
-  <section class="content gophercon-bio">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-10 col-md-offset-1 text-center">
-                <h1>GopherCon 2015</h1>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-3 text-center">
-              <img src="/images/cowboy-color.png" />
-            </div>
-            <div class="col-md-7 text-center">
-                <p><b>GopherCon</b> is organized by GopherAcademy, LLC, a community-driven group of developers focused on the education of developers and the promotion of the Go programming language.</p>
-                <p>It's the largest event in the world dedicated solely to the Go programming language. It's attended by the best and the brightest of the Go team and community. We're expecting a sold out attendance of 1,500 attendees this year.</p>
-            </div>
-        </div>
-      </div>
   </section>
   
   <section id="keynotes" class="content keynotes">
     	<div class="container">
         	<div class="col-md-10 col-md-offset-1 text-center">
                 <h1>Keynote Speakers</h1>
-                <p>We have the brightest in the industry to deliver opening and closing keynotes on both days.</p>
+                <p class="subheader">We have the brightest in the industry to deliver opening and closing keynotes on both days.</p>
         	</div>
           <div class="col-sm-6 col-md-3">
             <div class="thumbnail">
@@ -223,7 +203,7 @@
     	<div class="container">
         	<div class="text-center">
                 <h1>Speakers</h1>
-                <p></p>
+                <p class="subheader">&nbsp;</p>
         	</div>
 
           <div class="col-sm-6 col-md-2">
@@ -402,6 +382,7 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1 text-center">
                 <h1>Schedule</h1>
+                <br />
                 <ul class="nav nav-tabs schedule-days">
                   <li role="presentation" class="active"><a data-toggle="tab" href="#workshop-schedule">July <span>7th</span></a></li>
                   <li role="presentation" class="disabled"><a href="#day1-schedule">July <span>8th</span></a></li>
@@ -528,8 +509,8 @@
   <section id="hotels" class="content hotels">
     	<div class="container">
         	<div class="col-md-10 col-md-offset-1 text-center">
-                <h1>Hotels</h1>
-                <p>We have arranged special rates and reserved room blocks at hotels close to the Convention Center. Be sure to use the links, phone numbers, or booking codes below to get the reduced rates. If you have any trouble, call 1-866-650-8858 for help!</p>
+                <h1>Hotel Accommodations</h1>
+                <p class="subheader">We have arranged special rates and reserved room blocks at hotels close to the Convention Center. Be sure to use the links, phone numbers, or booking codes below to get the reduced rates. If you have any trouble, call 1-866-650-8858 for help!</p>
         	</div>
         </div>
 
