--- a/themes/gophercon/layouts/partials/footer.html
+++ b/themes/gophercon/layouts/partials/footer.html
@@ -1,15 +1,20 @@
 <footer>
     <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <p class="copyright">© 2015 GopherAcademy, LLC</p>
-                <p class="copyright-character">The Gopher character is based on the Go mascot designed by
-                <a href="http://reneefrench.blogspot.com/" target="blank">Renée French</a>
-                and copyrighted under the
-                <a href="http://creativecommons.org/licenses/by/3.0/us/" target="blank">Creative Commons Attribution 3.0 license.</a>
-                </p>
-            </div>
-        </div>
+      <div class="row">
+          <div class="col-md-3 text-center">
+            <img src="/images/cowboy-color.png" width="150" />
+          </div>
+          <div class="col-md-7">
+            <p><b>GopherCon</b> is organized by GopherAcademy, LLC, a community-driven group of developers focused on the education of developers and the promotion of the Go programming language.</p>
+
+            <p class="copyright">© 2015 GopherAcademy, LLC</p>
+            <p class="copyright-character">The Gopher character is based on the Go mascot designed by
+              <a href="http://reneefrench.blogspot.com/" target="blank">Renée French</a>
+              and copyrighted under the
+              <a href="http://creativecommons.org/licenses/by/3.0/us/" target="blank">Creative Commons Attribution 3.0 license.</a>
+            </p>
+          </div>
+      </div>
     </div>
 </footer>
 
