--- a/themes/gophercon/layouts/partials/sponsors.html
+++ b/themes/gophercon/layouts/partials/sponsors.html
@@ -1,7 +1,8 @@
 <section class="home-sponsors content">
   <div class="container">
     <div class="col-md-10 col-md-offset-1 text-center">
-      <h1>Our Sponsors</h1>
+      <h1>Thanks to Our Sponsors</h1>
+      <p class="subheader">Without their support this would not be possible</p>
 
       <!---------- Diamond Sponsors ---------->
         <div class="col-md-12 diamond">
