cleanup workshop sponsorship messaging

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -397,11 +397,6 @@
                     </ul>
                     <div class="tab-content">
                       <div id="bootcamp-schedule" class="schedule-tab schedule-item-tab tab-pane active">
-                        <h4>Go Bootcamp</h4>
-                        <p>The Go Bootcamp is an all day workshop to get you up and running with Go.</p>
-                        <p><img aligh="left" style="height: 80px; margin-right: 10px;" src="/images/temp-logos/ardan.png"/>The Go Bootcamp is provided by <a href="https://ardanlabs.com">Ardan Studios</a></p>
-                        <p>Tickets for this workshop can be purchased at an additional cost.<br /><br />
-                        <a href="https://ti.to/gophercon/gophercon-2015" class="btn btn-orange" target="_blank">Purchase Tickets <span  class="fa fa-arrow-circle-right"></span></a></p>
                         <div class="row schedule-item">
                           <div class="col-md-3 schedule-item-slot">
                             <span class="time">9:00am - 5:00pm</span>
@@ -421,15 +416,23 @@
                               <br />William Kennedy works in Miami, FL as a managing partner at Ardan Studios: a mobile, web and systems development company. He is also the co-author of the book Go In Action, the author of the blog <a href="http://www.goinggo.net/">GoingGo.Net</a> and the organizer for Miami's Go and MongoDB meetups.
                               </p>
                             </div>
+
+                          </div>
+                        </div>
+
+                        <hr />
+                        <div class="row">
+                          <div class="col-md-3 text-right">
+                            <img src="/images/temp-logos/ardan.png" width="100" />
+                          </div>
+                          <div class="col-md-9">
+                            <p>The Go Bootcamp is an all day workshop to get you up and running with GO provided by <a href="https://ardanlabs.com">Ardan Studios.</a> Tickets for this workshop can be purchased at an additional cost.</p>
+
+                            <a href="https://ti.to/gophercon/gophercon-2015" class="btn btn-orange" target="_blank">Purchase Tickets <span  class="fa fa-arrow-circle-right"></span></a></p>
                           </div>
                         </div>
                       </div>
                       <div id="workshop-tutorials-schedule" class="schedule-tab schedule-item-tab tab-pane">
-                        <h4>Workshop Track</h4>
-                        <p>This track is a series of highly focused workshops to further your Go knowledge by using Go in practice. They are taught by a number of renowned community members.</p>
-                        <p><img aligh="left" style="height: 80px; margin-right: 10px;" src="/images/temp-logos/ardan.png"/>The Go Workshops are provided by <a href="https://ardanlabs.com">Ardan Studios</a></p>
-                        <p>Tickets for this workshop can be purchased at an additional cost.<br /><br />
-                        <a href="https://ti.to/gophercon/gophercon-2015" class="btn btn-orange" target="_blank">Purchase Tickets <span  class="fa fa-arrow-circle-right"></span></a></p>
                         <div class="row schedule-item">
                           <div class="col-md-3 schedule-item-slot">
                             <span class="time">9:00am - 10:45am</span>
@@ -490,6 +493,18 @@
                             </div>
                           </div>
                         </div>
+                        <hr />
+                        <div class="row">
+                          <div class="col-md-3 text-right">
+                            <img src="/images/temp-logos/ardan.png" width="100" />
+                          </div>
+                          <div class="col-md-9">
+                            <p>This track is a series of highly focused workshops to further your Go knowledge by using Go in practice. They are taught by a number of renowned community members and provided by <a href="https://ardanlabs.com">Ardan Studios.</a>. Tickets for this workshop can be purchased at an additional cost.</p>
+
+                            <a href="https://ti.to/gophercon/gophercon-2015" class="btn btn-orange" target="_blank">Purchase Tickets <span  class="fa fa-arrow-circle-right"></span></a></p>
+                          </div>
+                        </div>
+                      </div>
                       </div>
                   </div>
                   </div>
