slight cleanup of speakers

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -147,10 +147,8 @@
             <div class="caption">
                 <h4>Speaker Name</h4>
                 <p>Short Bio</p>
-                <div>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-github"></i></a>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                <div class="handle">
+                  <a href="#">@speakername</i></a>
                 </div>
               </div>
             </div>
@@ -161,10 +159,8 @@
             <div class="caption">
                 <h4>Speaker Name</h4>
                 <p>Short Bio</p>
-                <div>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-github"></i></a>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                <div class="handle">
+                  <a href="#">@speakername</i></a>
                 </div>
               </div>
             </div>
@@ -175,10 +171,8 @@
             <div class="caption">
                 <h4>Speaker Name</h4>
                 <p>Short Bio</p>
-                <div>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-github"></i></a>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                <div class="handle">
+                  <a href="#">@speakername</i></a>
                 </div>
               </div>
             </div>
@@ -189,10 +183,8 @@
             <div class="caption">
                 <h4>Speaker Name</h4>
                 <p>Short Bio</p>
-                <div>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-github"></i></a>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                <div class="handle">
+                  <a href="#">@speakername</i></a>
                 </div>
               </div>
             </div>
@@ -212,10 +204,8 @@
             <div class="caption">
                 <h4>Speaker Name</h4>
                 <p>Short Bio</p>
-                <div>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-github"></i></a>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                <div class="handle">
+                  <a href="#">@speakername</i></a>
                 </div>
               </div>
             </div>
@@ -226,10 +216,8 @@
             <div class="caption">
                 <h4>Speaker Name</h4>
                 <p>Short Bio</p>
-                <div>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-github"></i></a>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                <div class="handle">
+                  <a href="#">@speakername</i></a>
                 </div>
               </div>
             </div>
@@ -240,10 +228,8 @@
             <div class="caption">
                 <h4>Speaker Name</h4>
                 <p>Short Bio</p>
-                <div>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-github"></i></a>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                <div class="handle">
+                  <a href="#">@speakername</i></a>
                 </div>
               </div>
             </div>
@@ -254,10 +240,8 @@
             <div class="caption">
                 <h4>Speaker Name</h4>
                 <p>Short Bio</p>
-                <div>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-github"></i></a>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                <div class="handle">
+                  <a href="#">@speakername</i></a>
                 </div>
               </div>
             </div>
@@ -268,10 +252,8 @@
             <div class="caption">
                 <h4>Speaker Name</h4>
                 <p>Short Bio</p>
-                <div>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-github"></i></a>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                <div class="handle">
+                  <a href="#">@speakername</i></a>
                 </div>
               </div>
             </div>
@@ -282,10 +264,8 @@
             <div class="caption">
                 <h4>Speaker Name</h4>
                 <p>Short Bio</p>
-                <div>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-github"></i></a>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                <div class="handle">
+                  <a href="#">@speakername</i></a>
                 </div>
               </div>
             </div>
@@ -296,10 +276,8 @@
             <div class="caption">
                 <h4>Speaker Name</h4>
                 <p>Short Bio</p>
-                <div>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-github"></i></a>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                <div class="handle">
+                  <a href="#">@speakername</i></a>
                 </div>
               </div>
             </div>
@@ -310,10 +288,8 @@
             <div class="caption">
                 <h4>Speaker Name</h4>
                 <p>Short Bio</p>
-                <div>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-github"></i></a>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                <div class="handle">
+                  <a href="#">@speakername</i></a>
                 </div>
               </div>
             </div>
@@ -324,10 +300,8 @@
             <div class="caption">
                 <h4>Speaker Name</h4>
                 <p>Short Bio</p>
-                <div>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-github"></i></a>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                <div class="handle">
+                  <a href="#">@speakername</i></a>
                 </div>
               </div>
             </div>
@@ -338,10 +312,8 @@
             <div class="caption">
                 <h4>Speaker Name</h4>
                 <p>Short Bio</p>
-                <div>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-github"></i></a>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                <div class="handle">
+                  <a href="#">@speakername</i></a>
                 </div>
               </div>
             </div>
@@ -352,10 +324,8 @@
             <div class="caption">
                 <h4>Speaker Name</h4>
                 <p>Short Bio</p>
-                <div>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-github"></i></a>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                <div class="handle">
+                  <a href="#">@speakername</i></a>
                 </div>
               </div>
             </div>
@@ -366,10 +336,8 @@
             <div class="caption">
                 <h4>Speaker Name</h4>
                 <p>Short Bio</p>
-                <div>
-                  <a href="#"><i class="fa fa-twitter"></i></a>
-                  <a href="#"><i class="fa fa-github"></i></a>
-                  <a href="#"><i class="fa fa-linkedin"></i></a>
+                <div class="handle">
+                  <a href="#">@speakername</i></a>
                 </div>
               </div>
             </div>
