cleanup hotels subheader

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -493,7 +493,7 @@
     	<div class="container">
         	<div class="col-md-10 col-md-offset-1 text-center">
                 <h1>Hotel Accommodations</h1>
-                <p class="subheader">We have arranged special rates and reserved room blocks at hotels close to the Convention Center. Be sure to use the links, phone numbers, or booking codes below to get the reduced rates. If you have any trouble, call 1-866-650-8858 for help!</p>
+                <p class="subheader">We have arranged special rates and reserved room blocks at hotels close to the Convention Center. Be sure to use the links, phone numbers, or booking codes below to get the reduced rates. <br /> If you have any trouble, call <strong>1-866-650-8858</strong> for help!</p>
         	</div>
         </div>
 
