cleanup footer spacing

--- a/themes/gophercon/layouts/partials/footer.html
+++ b/themes/gophercon/layouts/partials/footer.html
@@ -1,10 +1,10 @@
 <footer>
     <div class="container">
       <div class="row">
-          <div class="col-md-3 text-center">
-            <img src="/images/cowboy-color.png" width="150" />
+          <div class="col-md-2 col-md-offset-1 text-center">
+            <img src="/images/cowboy-color.png" width="170" />
           </div>
-          <div class="col-md-7">
+          <div class="col-md-7 col-md-offset-1">
             <p><b>GopherCon</b> is organized by GopherAcademy, LLC, a community-driven group of developers focused on the education of developers and the promotion of the Go programming language.</p>
 
             <p class="copyright">© 2015 GopherAcademy, LLC</p>
