--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -145,10 +145,10 @@
             <div class="thumbnail">
             <img src="/images/placeholder-hi.png" alt="...">
             <div class="caption">
-                <h4>Speaker Name</h4>
-                <p>Short Bio</p>
+                <h4>To Be Announced</h4>
+                <p></p>
                 <div class="handle">
-                  <a href="#">@speakername</i></a>
+                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
@@ -157,10 +157,10 @@
             <div class="thumbnail">
             <img src="/images/placeholder-hi.png" alt="...">
             <div class="caption">
-                <h4>Speaker Name</h4>
-                <p>Short Bio</p>
+                <h4>To Be Announced</h4>
+                <p></p>
                 <div class="handle">
-                  <a href="#">@speakername</i></a>
+                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
@@ -169,10 +169,10 @@
             <div class="thumbnail">
             <img src="/images/placeholder-hi.png" alt="...">
             <div class="caption">
-                <h4>Speaker Name</h4>
-                <p>Short Bio</p>
+                <h4>To Be Announced</h4>
+                <p></p>
                 <div class="handle">
-                  <a href="#">@speakername</i></a>
+                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
@@ -181,10 +181,10 @@
             <div class="thumbnail">
             <img src="/images/placeholder-hi.png" alt="...">
             <div class="caption">
-                <h4>Speaker Name</h4>
-                <p>Short Bio</p>
+                <h4>To Be Announced</h4>
+                <p></p>
                 <div class="handle">
-                  <a href="#">@speakername</i></a>
+                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
@@ -202,10 +202,10 @@
             <div class="thumbnail">
             <img src="/images/placeholder-hi.png" alt="...">
             <div class="caption">
-                <h4>Speaker Name</h4>
-                <p>Short Bio</p>
+                <h4>To Be Announced</h4>
+                <p></p>
                 <div class="handle">
-                  <a href="#">@speakername</i></a>
+                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
@@ -214,10 +214,10 @@
             <div class="thumbnail">
             <img src="/images/placeholder-hi.png" alt="...">
             <div class="caption">
-                <h4>Speaker Name</h4>
-                <p>Short Bio</p>
+                <h4>To Be Announced</h4>
+                <p></p>
                 <div class="handle">
-                  <a href="#">@speakername</i></a>
+                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
@@ -226,10 +226,10 @@
             <div class="thumbnail">
             <img src="/images/placeholder-hi.png" alt="...">
             <div class="caption">
-                <h4>Speaker Name</h4>
-                <p>Short Bio</p>
+                <h4>To Be Announced</h4>
+                <p></p>
                 <div class="handle">
-                  <a href="#">@speakername</i></a>
+                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
@@ -238,10 +238,10 @@
             <div class="thumbnail">
             <img src="/images/placeholder-hi.png" alt="...">
             <div class="caption">
-                <h4>Speaker Name</h4>
-                <p>Short Bio</p>
+                <h4>To Be Announced</h4>
+                <p></p>
                 <div class="handle">
-                  <a href="#">@speakername</i></a>
+                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
@@ -250,10 +250,10 @@
             <div class="thumbnail">
             <img src="/images/placeholder-hi.png" alt="...">
             <div class="caption">
-                <h4>Speaker Name</h4>
-                <p>Short Bio</p>
+                <h4>To Be Announced</h4>
+                <p></p>
                 <div class="handle">
-                  <a href="#">@speakername</i></a>
+                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
@@ -262,10 +262,10 @@
             <div class="thumbnail">
             <img src="/images/placeholder-hi.png" alt="...">
             <div class="caption">
-                <h4>Speaker Name</h4>
-                <p>Short Bio</p>
+                <h4>To Be Announced</h4>
+                <p></p>
                 <div class="handle">
-                  <a href="#">@speakername</i></a>
+                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
@@ -274,10 +274,10 @@
             <div class="thumbnail">
             <img src="/images/placeholder-hi.png" alt="...">
             <div class="caption">
-                <h4>Speaker Name</h4>
-                <p>Short Bio</p>
+                <h4>To Be Announced</h4>
+                <p></p>
                 <div class="handle">
-                  <a href="#">@speakername</i></a>
+                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
@@ -286,10 +286,10 @@
             <div class="thumbnail">
             <img src="/images/placeholder-hi.png" alt="...">
             <div class="caption">
-                <h4>Speaker Name</h4>
-                <p>Short Bio</p>
+                <h4>To Be Announced</h4>
+                <p></p>
                 <div class="handle">
-                  <a href="#">@speakername</i></a>
+                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
@@ -298,10 +298,10 @@
             <div class="thumbnail">
             <img src="/images/placeholder-hi.png" alt="...">
             <div class="caption">
-                <h4>Speaker Name</h4>
-                <p>Short Bio</p>
+                <h4>To Be Announced</h4>
+                <p></p>
                 <div class="handle">
-                  <a href="#">@speakername</i></a>
+                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
@@ -310,10 +310,10 @@
             <div class="thumbnail">
             <img src="/images/placeholder-hi.png" alt="...">
             <div class="caption">
-                <h4>Speaker Name</h4>
-                <p>Short Bio</p>
+                <h4>To Be Announced</h4>
+                <p></p>
                 <div class="handle">
-                  <a href="#">@speakername</i></a>
+                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
@@ -322,10 +322,10 @@
             <div class="thumbnail">
             <img src="/images/placeholder-hi.png" alt="...">
             <div class="caption">
-                <h4>Speaker Name</h4>
-                <p>Short Bio</p>
+                <h4>To Be Announced</h4>
+                <p></p>
                 <div class="handle">
-                  <a href="#">@speakername</i></a>
+                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
@@ -334,10 +334,82 @@
             <div class="thumbnail">
             <img src="/images/placeholder-hi.png" alt="...">
             <div class="caption">
-                <h4>Speaker Name</h4>
-                <p>Short Bio</p>
+                <h4>To Be Announced</h4>
+                <p></p>
                 <div class="handle">
-                  <a href="#">@speakername</i></a>
+                  <a href="#">@speaker</i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-2">
+            <div class="thumbnail">
+            <img src="/images/placeholder-hi.png" alt="...">
+            <div class="caption">
+                <h4>To Be Announced</h4>
+                <p></p>
+                <div class="handle">
+                  <a href="#">@speaker</i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-2">
+            <div class="thumbnail">
+            <img src="/images/placeholder-hi.png" alt="...">
+            <div class="caption">
+                <h4>To Be Announced</h4>
+                <p></p>
+                <div class="handle">
+                  <a href="#">@speaker</i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-2">
+            <div class="thumbnail">
+            <img src="/images/placeholder-hi.png" alt="...">
+            <div class="caption">
+                <h4>To Be Announced</h4>
+                <p></p>
+                <div class="handle">
+                  <a href="#">@speaker</i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-2">
+            <div class="thumbnail">
+            <img src="/images/placeholder-hi.png" alt="...">
+            <div class="caption">
+                <h4>To Be Announced</h4>
+                <p></p>
+                <div class="handle">
+                  <a href="#">@speaker</i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-2">
+            <div class="thumbnail">
+            <img src="/images/placeholder-hi.png" alt="...">
+            <div class="caption">
+                <h4>To Be Announced</h4>
+                <p></p>
+                <div class="handle">
+                  <a href="#">@speaker</i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-2">
+            <div class="thumbnail">
+            <img src="/images/placeholder-hi.png" alt="...">
+            <div class="caption">
+                <h4>To Be Announced</h4>
+                <p></p>
+                <div class="handle">
+                  <a href="#">@speaker</i></a>
                 </div>
               </div>
             </div>
@@ -394,7 +466,7 @@
                             <img src="/images/temp-logos/ardan.png" width="100" />
                           </div>
                           <div class="col-md-9">
-                            <p>The Go Bootcamp is an all day workshop to get you up and running with GO provided by <a href="https://ardanlabs.com">Ardan Studios.</a> Tickets for this workshop can be purchased at an additional cost.</p>
+                            <p>The Go Bootcamp is an all day workshop to get you up and running with Go provided by <a href="https://ardanlabs.com">Ardan Labs.</a> Tickets for this workshop can be purchased at an additional cost.</p>
 
                             <a href="https://ti.to/gophercon/gophercon-2015" class="btn btn-orange" target="_blank">Purchase Tickets <span  class="fa fa-arrow-circle-right"></span></a></p>
                           </div>
@@ -442,12 +514,12 @@
                         </div>
                         <div class="row schedule-item">
                           <div class="col-md-3 schedule-item-slot">
-                            <span class="time">1:30pm - 3:15pm</span>
+                            <span class="time">1:30pm - 5:00pm</span>
                             <span class="location">Location: TBD</span>
                           </div>
                           <div class="col-md-9 schedule-item-details">
                             <div class="schedule-item-summary">
-                              <span class="title">HTTP - Web Apps and APIs (Part 1)</span>
+                              <span class="title">HTTP - Web Apps and APIs</span>
                               <div class="speaker">
                                 <span class="name">Mark Bates, Jeremy Saenz</span>
                               </div>
@@ -467,7 +539,7 @@
                             <img src="/images/temp-logos/ardan.png" width="100" />
                           </div>
                           <div class="col-md-9">
-                            <p>This track is a series of highly focused workshops to further your Go knowledge by using Go in practice. They are taught by a number of renowned community members and provided by <a href="https://ardanlabs.com">Ardan Studios.</a>. Tickets for this workshop can be purchased at an additional cost.</p>
+                            <p>This track is a series of highly focused workshops to further your Go knowledge by using Go in practice. They are taught by a number of renowned community members and provided by <a href="https://ardanlabs.com">Ardan Labs.</a>. Tickets for this workshop can be purchased at an additional cost.</p>
 
                             <a href="https://ti.to/gophercon/gophercon-2015" class="btn btn-orange" target="_blank">Purchase Tickets <span  class="fa fa-arrow-circle-right"></span></a></p>
                           </div>
