--- a/themes/gophercon/layouts/partials/navbar.html
+++ b/themes/gophercon/layouts/partials/navbar.html
@@ -39,13 +39,12 @@
           <ul class="dropdown-menu" role="menu">
             <li><a href="/#workshop-schedule">Workshops</a></li>
             <li><a href="/#keynotes">Keynotes</a></li>
-            <li><a href="/speakers">Speakers</a></li>
+            <li><a href="/#speakers">Speakers</a></li>
           </ul>
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">EVENTS <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="/events">Events</a></li>
             <li><a href="/events/after-party">After Party</a></li>
           </ul>
         </li>
