Fix bootcamp title

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -444,7 +444,7 @@
                           </div>
                           <div class="col-md-9 schedule-item-details">
                             <div class="schedule-item-summary">
-                              <span class="title">Exploring Go's Utility Ecosystem</span>
+                              <span class="title">Go Bootcamp</span>
                               <div class="speaker">
                                 <span class="name">William Kennedy</span>
                                 <span class="designation">Ardan Labs</span>
