Add powered by Hugo to footer.

--- a/themes/gophercon/layouts/partials/footer.html
+++ b/themes/gophercon/layouts/partials/footer.html
@@ -13,6 +13,7 @@
               and copyrighted under the
               <a href="http://creativecommons.org/licenses/by/3.0/us/" target="blank">Creative Commons Attribution 3.0 license.</a>
             </p>
+            <p>Powered by <a href="http://gohugo.io">Hugo</a>.</p>
           </div>
       </div>
     </div>
