--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -143,7 +143,7 @@
         	</div>
           <div class="col-sm-6 col-md-3">
             <div class="thumbnail">
-            <img src="/images/placeholder-hi.png" alt="...">
+            <img src="/images/gopher-placeholder.png" alt="...">
             <div class="caption">
                 <h4>To Be Announced</h4>
                 <p></p>
@@ -155,7 +155,7 @@
           </div>
           <div class="col-sm-6 col-md-3">
             <div class="thumbnail">
-            <img src="/images/placeholder-hi.png" alt="...">
+            <img src="/images/gopher-placeholder.png" alt="...">
             <div class="caption">
                 <h4>To Be Announced</h4>
                 <p></p>
@@ -167,7 +167,7 @@
           </div>
           <div class="col-sm-6 col-md-3">
             <div class="thumbnail">
-            <img src="/images/placeholder-hi.png" alt="...">
+            <img src="/images/gopher-placeholder.png" alt="...">
             <div class="caption">
                 <h4>To Be Announced</h4>
                 <p></p>
@@ -179,7 +179,7 @@
           </div>
           <div class="col-sm-6 col-md-3">
             <div class="thumbnail">
-            <img src="/images/placeholder-hi.png" alt="...">
+            <img src="/images/gopher-placeholder.png" alt="...">
             <div class="caption">
                 <h4>To Be Announced</h4>
                 <p></p>
@@ -200,7 +200,7 @@
 
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/placeholder-hi.png" alt="...">
+            <img src="/images/gopher-placeholder.png" alt="...">
             <div class="caption">
                 <h4>To Be Announced</h4>
                 <p></p>
@@ -212,7 +212,7 @@
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/placeholder-hi.png" alt="...">
+            <img src="/images/gopher-placeholder.png" alt="...">
             <div class="caption">
                 <h4>To Be Announced</h4>
                 <p></p>
@@ -224,7 +224,7 @@
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/placeholder-hi.png" alt="...">
+            <img src="/images/gopher-placeholder.png" alt="...">
             <div class="caption">
                 <h4>To Be Announced</h4>
                 <p></p>
@@ -236,7 +236,7 @@
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/placeholder-hi.png" alt="...">
+            <img src="/images/gopher-placeholder.png" alt="...">
             <div class="caption">
                 <h4>To Be Announced</h4>
                 <p></p>
@@ -248,7 +248,7 @@
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/placeholder-hi.png" alt="...">
+            <img src="/images/gopher-placeholder.png" alt="...">
             <div class="caption">
                 <h4>To Be Announced</h4>
                 <p></p>
@@ -260,7 +260,7 @@
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/placeholder-hi.png" alt="...">
+            <img src="/images/gopher-placeholder.png" alt="...">
             <div class="caption">
                 <h4>To Be Announced</h4>
                 <p></p>
@@ -272,7 +272,7 @@
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/placeholder-hi.png" alt="...">
+            <img src="/images/gopher-placeholder.png" alt="...">
             <div class="caption">
                 <h4>To Be Announced</h4>
                 <p></p>
@@ -284,7 +284,7 @@
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/placeholder-hi.png" alt="...">
+            <img src="/images/gopher-placeholder.png" alt="...">
             <div class="caption">
                 <h4>To Be Announced</h4>
                 <p></p>
@@ -296,7 +296,7 @@
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/placeholder-hi.png" alt="...">
+            <img src="/images/gopher-placeholder.png" alt="...">
             <div class="caption">
                 <h4>To Be Announced</h4>
                 <p></p>
@@ -308,7 +308,7 @@
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/placeholder-hi.png" alt="...">
+            <img src="/images/gopher-placeholder.png" alt="...">
             <div class="caption">
                 <h4>To Be Announced</h4>
                 <p></p>
@@ -320,7 +320,7 @@
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/placeholder-hi.png" alt="...">
+            <img src="/images/gopher-placeholder.png" alt="...">
             <div class="caption">
                 <h4>To Be Announced</h4>
                 <p></p>
@@ -332,7 +332,7 @@
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/placeholder-hi.png" alt="...">
+            <img src="/images/gopher-placeholder.png" alt="...">
             <div class="caption">
                 <h4>To Be Announced</h4>
                 <p></p>
@@ -344,7 +344,7 @@
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/placeholder-hi.png" alt="...">
+            <img src="/images/gopher-placeholder.png" alt="...">
             <div class="caption">
                 <h4>To Be Announced</h4>
                 <p></p>
@@ -356,7 +356,7 @@
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/placeholder-hi.png" alt="...">
+            <img src="/images/gopher-placeholder.png" alt="...">
             <div class="caption">
                 <h4>To Be Announced</h4>
                 <p></p>
@@ -368,7 +368,7 @@
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/placeholder-hi.png" alt="...">
+            <img src="/images/gopher-placeholder.png" alt="...">
             <div class="caption">
                 <h4>To Be Announced</h4>
                 <p></p>
@@ -380,7 +380,7 @@
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/placeholder-hi.png" alt="...">
+            <img src="/images/gopher-placeholder.png" alt="...">
             <div class="caption">
                 <h4>To Be Announced</h4>
                 <p></p>
@@ -392,7 +392,7 @@
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/placeholder-hi.png" alt="...">
+            <img src="/images/gopher-placeholder.png" alt="...">
             <div class="caption">
                 <h4>To Be Announced</h4>
                 <p></p>
@@ -404,7 +404,7 @@
           </div>
           <div class="col-sm-3 col-md-2">
             <div class="thumbnail">
-            <img src="/images/placeholder-hi.png" alt="...">
+            <img src="/images/gopher-placeholder.png" alt="...">
             <div class="caption">
                 <h4>To Be Announced</h4>
                 <p></p>
