Mark Hampton Inn as sold out.

--- a/themes/gophercon/layouts/index.html
+++ b/themes/gophercon/layouts/index.html
@@ -577,7 +577,7 @@
                 <p>550 15th Street,<br /> Denver, CO 80202</p>
 				<p>Tel: 800.445.8667<br />
 					Code: GopherCon</p></div>
-							<div style="float:right"><a href="http://hamptoninn.hilton.com/en/hp/groups/personalized/D/DENCVHX-GOP-20150705/index.jhtml" class="btn btn-orange" target="_blank">Book</a></div>
+							<div style="float:right"><div class="btn btn-danger" target="_blank">Sold Out!</div></div>
             </section>
 		</div>
 		        <div class="homewood col-md-2">
